# Aether

./: LICENSE  README.md  TEST.m4a
backend/: .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts
backend/src/: main.rs  response.rs  router.rs
backend/src/main/java/cc/viky/aether/: AetherApplication.java
backend/src/main/resources/: application.properties
backend/src/rxtx/: mod.rs  multipart.rs  response.rs
backend/src/test/java/cc/viky/aether/: AetherApplicationTests.java
backend/src/tools/hashing/: bcrypt.rs
backend/src/tools/image/: convert.rs  mod.rs
frontend/: README.md  angular.json  package-lock.json
frontend/Aether/: package.json
frontend/Aether/src/app/: app.ts
frontend/src/: index.html
frontend/src/app/: app.spec.ts
